Fix various --minimal build issue https://bugs.webkit.org/show_bug.cgi?id=164479

Reviewed by Darin Adler.

* dom/Node.cpp:
* platform/audio/PlatformMediaSessionManager.cpp:
* testing/Internals.cpp:
(WebCore::Internals::captionsStyleSheetOverride):


Canonical link: https://commits.webkit.org/182400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208682 268f45cc-cd09-0410-ab3c-d52691b4dbfc